# rustplay

./: Cargo.toml  README.md  in  in.txt  main.py  out  out.txt  package.json
archive/: check_prime.rs  fact_z_count.rs  factorial.rs  sieve.rs
src/: lib.rs  main.rs  reset.rs
trash/: bin_search.rs  gcd.rs
