[package]
name = "rustplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# rand = "0.8.4"
# num = "0.4.0"
# terminal-clipboard = "0.3.1"

[[bin]]
name = "rustplay"
path = "src/main.rs"
